--- a/frontend/src/Pages/Overall.css
+++ b/frontend/src/Pages/Overall.css
@@ -131,7 +131,7 @@
 
         border-radius: 10px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        border: 1px solid teal;
+        /* border: 1px solid teal; */
 
 
     }
@@ -139,7 +139,7 @@
     .MainDivChart {
         display: flex;
 
-        border: 1px solid purple;
+        /* border: 1px solid purple; */
         height: 300px;
     }
 
